chapel-lang.org/docs/1.31/_sources/modules/standard/GPU.rst.txt
.. default-domain:: chpl

.. module:: GPU
   :synopsis: Supports utility functions for operating with GPUs.

GPU
===
**Usage**

.. code-block:: chapel

   use GPU;


or

.. code-block:: chapel

   import GPU;

Supports utility functions for operating with GPUs.

.. warning::

  This module is unstable and its interface is subject to change in the
  future.

  GPU support is a relatively new feature to Chapel and is under active
  development.

  For the most up-to-date information about GPU support see the
  :ref:`technical note <readme-gpu>` about it.

.. function:: proc gpuWrite(const args ...?k)

   
   This function is intended to be called from within a GPU kernel and is
   useful for debugging purposes.
   
   Currently using :proc:`~ChapelIO.write` to send output to ``stdout`` will
   make a loop ineligible for GPU execution; use :proc:`gpuWrite` instead.
   
   Currently this function will only work if values of type ``c_string`` are
   passed.
   
   On NVIDIA GPUs the written values will be flushed to the terminal after
   the kernel has finished executing.  Note that there is a 1MB limit on the
   size of this buffer.
   

.. function:: proc gpuWriteln(const args ...?k)

   
   Pass arguments to :proc:`gpuWrite` and follow with a newline.
   

.. function:: proc assertOnGpu()

   
   Will halt execution at runtime if called from outside a GPU.  If used on
   first line in ``foreach`` or ``forall`` loop will also do a compile time
   check that the loop is eligible for execution on a GPU.
   

.. function:: proc gpuClock(): uint

   
   Returns value of a per-multiprocessor counter that increments every clock cycle.
   This function is meant to be called to time sections of code within a GPU
   enabled loop.
   

.. function:: proc gpuClocksPerSec(devNum: int)

   
   Returns the number of clock cycles per second of a GPU multiprocessor.
   Note: currently we don't support calling this function from within a kernel.
   

.. function:: proc syncThreads()

   
   Synchronize threads within a GPU block.
   

.. function:: proc createSharedArray(type eltType, param size): c_ptr(eltType)

   
   Allocate block shared memory, enough to store ``size`` elements of
   ``eltType``. Returns a :type:`CTypes.c_ptr` to the allocated array. Note that
   although every thread in a block calls this procedure, the same shared array
   is returned to all of them.
   
   :arg eltType: the type of elements to allocate the array for.
   
   :arg size: the number of elements in each GPU thread block's copy of the array.
   

.. function:: proc setBlockSize(blockSize: int)

   
   Set the block size for kernels launched on the GPU.
   

.. function:: proc gpuAtomicAdd(ref x: ?T, val: T): void

   When run on a GPU, atomically add 'val' to 'x' (result is stored in 'x'). 

.. function:: proc gpuAtomicSub(ref x: ?T, val: T): void

   When run on a GPU, atomically subtract 'val' from 'x' (result is stored in 'x'). 

.. function:: proc gpuAtomicMin(ref x: ?T, val: T): void

   When run on a GPU, atomically compare 'x' and 'val' and store the minimum in 'x'. 

.. function:: proc gpuAtomicMax(ref x: ?T, val: T): void

   When run on a GPU, atomically compare 'x' and 'val' and store the maximum in 'x'. 

.. function:: proc gpuAtomicInc(ref x: ?T, val: T): void

   When run on a GPU, atomically increments x if the original value of x is
   greater-than or equal to val, if so the result is stored in 'x'. 

.. function:: proc gpuAtomicDec(ref x: ?T, val: T): void

   When run on a GPU, atomically determine if 'x' equals 0 or is greater than 'val'.
   If so store 'val' in 'x' otherwise decrement 'x' by 1. 

.. function:: proc gpuAtomicAnd(ref x: ?T, val: T): void

   When run on a GPU, atomically perform a bitwise 'and' operation on 'x' and 'val' and store
   the result in 'x'. 

.. function:: proc gpuAtomicOr(ref x: ?T, val: T): void

   When run on a GPU, atomically perform a bitwise 'or' operation on 'x' and 'val' and store
   the result in 'x'.  

.. function:: proc gpuAtomicXor(ref x: ?T, val: T): void

   When run on a GPU, atomically perform a bitwise 'xor' operation on 'x' and 'val' and store
   the result in 'x'. 

.. function:: proc gpuAtomicCAS(ref x: ?T, cmp: T, val: T): void

   When run on a GPU, atomically compare the value in 'x' and 'cmp', if they
   are equal store 'val' in 'x'.  

